[package]
name = "ge_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "ge_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11.14", features = ["json"]}
tokio = { version = "1", features = ["full"] }